--- a/style.css
+++ b/style.css
@@ -177,7 +177,7 @@ p {
     min-height: 100vh;
     display: flex;
     align-items: center;
-    background: linear-gradient(rgba(245, 224, 194, 0.9), rgba(235, 235, 235, 0.9)), url('cover.png');
+    background: linear-gradient(rgba(245, 224, 194, 0.6), rgba(235, 235, 235, 0.6)), url('cover.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -395,7 +395,7 @@ section {
 }
 
 .product-overlay {
-    background: rgba(139, 40, 27, 0.8);
+    /* background: rgba(139, 40, 27, 0.8); */
     width: 100%;
     height: 100%;
     display: flex;
